kubernetes/dashboard/dashboard-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-svc
spec:
  selector:
    k8s-app: kubernetes-dashboard
  type: ClusterIP
  clusterIP: None
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9090
